--- a/carousell-clone/src/Searchbar.css
+++ b/carousell-clone/src/Searchbar.css
@@ -78,8 +78,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    left: 273px;
-    top: 100px;
+    margin-top: 145px;
     color: #717272;
     background-color:  #F0F1F1;
     width: 99px;
