--- a/carousell-clone/src/FreshFinds.css
+++ b/carousell-clone/src/FreshFinds.css
@@ -1,6 +1,12 @@
 .freshfinds {
     display: flex;
     flex-direction: column;
+    margin-left: 48px;
+    margin-top: 30px;
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 .listings {
@@ -9,13 +15,11 @@
     flex-wrap: wrap;
 }
 
-.listing__thumbnail {
-    object-fit: contain;
-    height: 200px;
-    width: 200px;
-    border-radius: 4px;
-}
 
-.listing {
-    display: block
+
+.freshfinds__title {
+    margin-top: 10px;
+    font-size: x-large;
+    margin-left: 10px;
+    font-weight: 600;
 }
