Changes to fresh finds

--- a/carousell-clone/src/FreshFinds.css
+++ b/carousell-clone/src/FreshFinds.css
@@ -10,6 +10,8 @@
 }
 
 .listings {
+    margin-top: 10px;
+    margin-left: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
