--- a/carousell-clone/src/FreshFinds.css
+++ b/carousell-clone/src/FreshFinds.css
@@ -1,27 +1,28 @@
 .freshfinds {
-    display: flex;
-    flex-direction: column;
-    margin-left: 48px;
-    margin-top: 30px;
-    border: 1px solid lightgray;
-    border-radius: 4px;
-    padding-right: 5px;
-    padding-left: 5px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 48px;
+  margin-top: 30px;
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-bottom: 20px;
 }
 
 .listings {
-    margin-top: 10px;
-    margin-left: 10px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  margin-top: 10px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
-
-
 .freshfinds__title {
-    margin-top: 10px;
-    font-size: x-large;
-    margin-left: 10px;
-    font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: x-large;
+  margin-left: 10px;
+  font-weight: 600;
 }
